--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: CI/CD for HTML Page
- 
+
 on:
   push:
     branches:
       - main
- 
+
 jobs:
   # Build Job
   build:
@@ -12,18 +12,17 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
- 
+
       - name: Install Dependencies
         run: |
           # Assuming you don't have any dependencies for a basic HTML page, we can skip this step.
- 
+
       - name: Upload artifact to enable deployment
         uses: actions/upload-artifact@v4
         with:
           name: html-file
-          path: |
-            ./index.html
- 
+          path: ./index.html  # Ensure index.html exists in the root directory or adjust path
+
   # Deploy Job
   deploy:
     needs: build
@@ -33,10 +32,13 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: html-file
-          path: ./html
- 
+          path: ./html  # This should match where you want the artifact to be downloaded
+
+      - name: List files for debugging (optional)
+        run: ls -la ./html  # Optional: Check the files in the 'html' directory to confirm index.html is there
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.KEYY }}  # Use the default GitHub token for authentication
-          publish_dir: ./html
+          github_token: ${{ secrets.KEYY }}  # Use your secret token here for authentication
+          publish_dir: ./html  # Ensure this points to the folder with index.html
